Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-91104

REG->6.0/Windows : QFileSystemModel no longer displays file icons

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 6.1.0
    • 6.0.0
    • GUI: Painting
    • None
    • Windows

      Steps to reproduce:

      • Launch tests\manual\dialogs
      • Turn off native file dialogs
      • Open File dialog
        Note: No icons are displayed

      Note: The dirview example is not suited for reproducing this since QAbstractFileIconProvider as a result of moving QFileSystemModel to QtGui no longer creates any icons on Windows. https://codereview.qt-project.org/c/qt/qtbase/+/334113 attempts to fix this. One needs to instantiate a Widgets' QFileIconProvider and set it on the model (see qtbug91104_dirview_repro.diff , which can also used to show pixmaps via context menu ).

      Analysis so far ( qtbug91104_log.txt ) shows that QWindowsFileIconEngine (src\plugins\platforms\windows\qwindowstheme.cpp:885 ) apparently no longer works after the recent QIcon changes. It still serves the correct pixmaps, but QPixmapIconEngine::scaledPixmap() returns a null pixmap ( src\gui\image\qicon.cpp:298 ).

        1. qtbug91104_diag.diff
          8 kB
        2. qtbug91104_dirview_repro.diff
          2 kB
        3. qtbug91104_log.txt
          38 kB
        4. qtbug91104.jpg
          qtbug91104.jpg
          111 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            sorvig Morten Sørvig
            kleint Friedemann Kleint
            Veli-Pekka Heinonen Veli-Pekka Heinonen
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes